--- a/WEB1001-Assignment1/Pages/Shared/_Layout.cshtml
+++ b/WEB1001-Assignment1/Pages/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            @await RenderSectionAsync("Top", required: false)
             @RenderBody()
         </main>
     </div>
