added paragraph to Intro page

--- a/WEB1001-Assignment1/Pages/Intro.cshtml
+++ b/WEB1001-Assignment1/Pages/Intro.cshtml
@@ -15,4 +15,10 @@
 <br />
 Output:<br />
 1. @Model.Number_1<br />
-2. @Model.Number_2<br />
+2. @Model.Number_2<br /><br />
+@section BelowBody {
+<h5>This is a paragraph.</h5>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dignissim mauris orci, quis interdum lectus ultricies ut. Maecenas augue erat, egestas luctus ipsum non, faucibus malesuada magna. Quisque varius volutpat ex, et fermentum nibh viverra ut. Nam tempus consectetur enim, in mollis ante. Nunc gravida ut est sed pretium. In laoreet eu augue in pellentesque. Proin vestibulum facilisis justo. Nullam eget tristique dui, nec interdum metus. Suspendisse pharetra rhoncus nisl, eget consequat dui. Praesent eu eros vitae metus lobortis pretium. Nulla laoreet diam eget erat dapibus, eu tempor lorem malesuada.
+</p>
+}
